<resources>
    <string name="app_name">HureanEnsamble</string>
    <string name="servicios">Servicios</string>
    <string name="email">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="eventos">Eventos</string>
    <string name="playlist">Playlist</string>
    <string name="canciones">Canciones</string>
    <string name="usuarios">Usuarios</string>
    <string name="sobre_nosotros">Sobre nosotros</string>
    <string name="logout">Logout</string>
    <string name="addsong">addSong</string>
    <string name="nombre_de_la_cancion">Nombre de la canción</string>
    <string name="link">Link</string>
    <string name="anadir">Añadir</string>
    <string name="cancelar">Cancelar</string>
    <string name="modify_song_button">Modificar</string>
    <string name="delete_song_button">Eliminar</string>
    <string name="ver_playlist">Ver Playlist</string>
    <string name="are_you_sure_delete_song_message">¿Estás seguro que quieres eliminar la canción?</string>
    <string name="delete_song_title">Eliminar Canción</string>
    <string name="nombre_usuario">Nombre Usuario</string>
    <string name="modificar_cancion">Modificar</string>
    <string name="are_you_sure_modify_song_message">Seguro que quieres modificar?</string>
    <string name="modify_song_title">Modificar Cancion</string>
    <string name="nombre_del_usuario">Nombre del usuario</string>
    <string name="new_email">Email</string>
    <string name="new_contrasena">Contraseña</string>
    <string name="add_user">Add User</string>
    <string-array name="user_rol_options">
        <item>admin</item>
        <item>user</item>
    </string-array>
    <string name="are_you_sure_delete_user_message">"¿Estás seguro que quieres eliminar el usuario?"</string>
    <string name="delete_user_title">Eliminar Usuario</string>
    <string name="modificar_usuario">MODIFICAR USUARIO</string>
    <string name="are_you_sure_modify_user_message">¿Estás seguro que quieres modificar el usuario?</string>
    <string name="modify_user_title">Modificar usuario</string>
    <string name="user_profile">user_profile</string>
    <string name="imagen_anadir_cancion">imagen_anadir_cancion</string>
    <string name="are_you_sure_delete_playlist_message">¿Estás seguro que quieres eliminar la playlist?</string>
    <string name="delete_playlist_title">Eliminar Playlist</string>
    <string name="anadir_playlist">AÑADIR PLAYLIST</string>
    <string name="nombre_de_la_playlist">Nombre de la Playlist</string>
    <string name="anadir_evento_title">AÑADIR EVENTO</string>
    <string name="imagen_anadir_evento">imagen_anadir_evento</string>
    <string name="lugar_del_evento">Lugar del evento</string>
    <string name="nombre_del_usuario_evento">Nombre del usuario</string>
    <string name="fecha_del_evento">Fecha del evento</string>
    <string name="playlist_asociada">Playlist asociada</string>
    <string name="are_you_sure_delete_event_message">¿Estás seguro que quieres eliminar el evento?</string>
    <string name="delete_event_title">Eliminar Evento</string>
</resources>