<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/add_user"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/add_user"
        app:showAsAction="always" />
    <item
        android:id="@+id/sobre_nosotros"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/sobre_nosotros"
        app:showAsAction="always" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_24px"
        android:title="Home"
        app:showAsAction="always" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout_24px"
        android:title="@string/logout"
        app:showAsAction="always" />

</menu>