<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/sobre_nosotros"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/sobre_nosotros"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/home"
        android:icon="@drawable/home_24px"
        android:title="Home"
        app:showAsAction="always" />
    <item
        android:id="@+id/userProfile"
        android:icon="@drawable/user_profile_24px"
        android:title="@string/user_profile"
        app:showAsAction="always"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout_24px"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />

</menu>