<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:padding="24dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/background_medium">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEventosHome"
                style="@style/HureanButton"
                android:text="@string/eventos" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnServicesHome"
                style="@style/HureanButton"
                android:text="@string/servicios" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlaylistHome"
                style="@style/HureanButton"
                android:text="@string/playlist" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSongHome"
                style="@style/HureanButton"
                android:text="@string/canciones" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnUsersHome"
                style="@style/HureanButton"
                android:text="@string/usuarios"
                android:visibility="gone" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
