<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="409dp"
        android:layout_height="231dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/imagen_anadir_cancion"
        app:layout_constraintBottom_toTopOf="@+id/modifySongTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_song" />

    <TextView
        android:id="@+id/modifySongTitle"
        android:layout_width="266dp"
        android:layout_height="53dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="73dp"
        android:text="AÑADIR CANCIÓN"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/hurean_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_de_la_cancion"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/editURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link"
            android:minHeight="48dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddUser"
            style="@style/HureanButton"
            android:onClick="addButton"
            android:text="@string/anadir" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancelar"
            style="@style/HureanButton"
            android:onClick="cancelButton"
            android:text="@string/cancelar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>