<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="15dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="#F1E9D6"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/playlist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/hurean_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Nombre de la Playlist"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/modify_event_button"
            style="@style/HureanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_song_button"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_event_button"
            style="@style/HureanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_song_button"
            android:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/see_playlist_button"
            style="@style/HureanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_playlist" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>